build/log/idf_py_stdout_output_53379
[1/13] Performing build step for 'bootloader'
[1/1] cd /Users/dheerajmahendiran/esp/scanchain/build/bootloader/esp-idf/esptool_py && /Users/dheerajmahendiran/.espressif/python_env/idf5.2_py3.9_env/bin/python /Users/dheerajmahendiran/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /Users/dheerajmahendiran/esp/scanchain/build/bootloader/bootloader.bin
Bootloader binary size 0x5330 bytes. 0x2cd0 bytes (35%) free.
[2/11] Building CXX object esp-idf/scanchain_spi/CMakeFiles/__idf_scanchain_spi.dir/src/scanchain_spi/scanchain_spi.cpp.obj
[3/11] Building CXX object esp-idf/cppspi/CMakeFiles/__idf_cppspi.dir/src/cppspi/cppspi.cpp.obj
FAILED: esp-idf/cppspi/CMakeFiles/__idf_cppspi.dir/src/cppspi/cppspi.cpp.obj 
/Users/dheerajmahendiran/.espressif/tools/xtensa-esp32s3-elf/esp-12.2.0_20230208/xtensa-esp32s3-elf/bin/xtensa-esp32s3-elf-g++ -DESP_PLATFORM -DIDF_VER=\"v5.2-dev-2383-g82cceabc6e\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/dheerajmahendiran/esp/scanchain/build/config -I/Users/dheerajmahendiran/esp/scanchain/components/cppspi/include -I/Users/dheerajmahendiran/esp/esp-idf/components/newlib/platform_include -I/Users/dheerajmahendiran/esp/esp-idf/components/freertos/config/include -I/Users/dheerajmahendiran/esp/esp-idf/components/freertos/config/include/freertos -I/Users/dheerajmahendiran/esp/esp-idf/components/freertos/config/xtensa/include -I/Users/dheerajmahendiran/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/dheerajmahendiran/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Users/dheerajmahendiran/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/Users/dheerajmahendiran/esp/esp-idf/components/freertos/esp_additions/include -I/Users/dheerajmahendiran/esp/esp-idf/components/esp_hw_support/include -I/Users/dheerajmahendiran/esp/esp-idf/components/esp_hw_support/include/soc -I/Users/dheerajmahendiran/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/Users/dheerajmahendiran/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/Users/dheerajmahendiran/esp/esp-idf/components/esp_hw_support/port/esp32s3/private_include -I/Users/dheerajmahendiran/esp/esp-idf/components/heap/include -I/Users/dheerajmahendiran/esp/esp-idf/components/log/include -I/Users/dheerajmahendiran/esp/esp-idf/components/soc/include -I/Users/dheerajmahendiran/esp/esp-idf/components/soc/esp32s3 -I/Users/dheerajmahendiran/esp/esp-idf/components/soc/esp32s3/include -I/Users/dheerajmahendiran/esp/esp-idf/components/hal/esp32s3/include -I/Users/dheerajmahendiran/esp/esp-idf/components/hal/include -I/Users/dheerajmahendiran/esp/esp-idf/components/hal/platform_port/include -I/Users/dheerajmahendiran/esp/esp-idf/components/esp_rom/include -I/Users/dheerajmahendiran/esp/esp-idf/components/esp_rom/include/esp32s3 -I/Users/dheerajmahendiran/esp/esp-idf/components/esp_rom/esp32s3 -I/Users/dheerajmahendiran/esp/esp-idf/components/esp_common/include -I/Users/dheerajmahendiran/esp/esp-idf/components/esp_system/include -I/Users/dheerajmahendiran/esp/esp-idf/components/esp_system/port/soc -I/Users/dheerajmahendiran/esp/esp-idf/components/esp_system/port/include/private -I/Users/dheerajmahendiran/esp/esp-idf/components/xtensa/esp32s3/include -I/Users/dheerajmahendiran/esp/esp-idf/components/xtensa/include -I/Users/dheerajmahendiran/esp/esp-idf/components/xtensa/deprecated_include -I/Users/dheerajmahendiran/esp/esp-idf/components/lwip/include -I/Users/dheerajmahendiran/esp/esp-idf/components/lwip/include/apps -I/Users/dheerajmahendiran/esp/esp-idf/components/lwip/include/apps/sntp -I/Users/dheerajmahendiran/esp/esp-idf/components/lwip/lwip/src/include -I/Users/dheerajmahendiran/esp/esp-idf/components/lwip/port/include -I/Users/dheerajmahendiran/esp/esp-idf/components/lwip/port/freertos/include -I/Users/dheerajmahendiran/esp/esp-idf/components/lwip/port/esp32xx/include -I/Users/dheerajmahendiran/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/Users/dheerajmahendiran/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/Users/dheerajmahendiran/esp/esp-idf/components/driver/include -I/Users/dheerajmahendiran/esp/esp-idf/components/driver/deprecated -I/Users/dheerajmahendiran/esp/esp-idf/components/driver/analog_comparator/include -I/Users/dheerajmahendiran/esp/esp-idf/components/driver/dac/include -I/Users/dheerajmahendiran/esp/esp-idf/components/driver/gpio/include -I/Users/dheerajmahendiran/esp/esp-idf/components/driver/gptimer/include -I/Users/dheerajmahendiran/esp/esp-idf/components/driver/i2c/include -I/Users/dheerajmahendiran/esp/esp-idf/components/driver/i2s/include -I/Users/dheerajmahendiran/esp/esp-idf/components/driver/ledc/include -I/Users/dheerajmahendiran/esp/esp-idf/components/driver/mcpwm/include -I/Users/dheerajmahendiran/esp/esp-idf/components/driver/parlio/include -I/Users/dheerajmahendiran/esp/esp-idf/components/driver/pcnt/include -I/Users/dheerajmahendiran/esp/esp-idf/components/driver/rmt/include -I/Users/dheerajmahendiran/esp/esp-idf/components/driver/sdio_slave/include -I/Users/dheerajmahendiran/esp/esp-idf/components/driver/sdmmc/include -I/Users/dheerajmahendiran/esp/esp-idf/components/driver/sigma_delta/include -I/Users/dheerajmahendiran/esp/esp-idf/components/driver/spi/include -I/Users/dheerajmahendiran/esp/esp-idf/components/driver/temperature_sensor/include -I/Users/dheerajmahendiran/esp/esp-idf/components/driver/touch_sensor/include -I/Users/dheerajmahendiran/esp/esp-idf/components/driver/twai/include -I/Users/dheerajmahendiran/esp/esp-idf/components/driver/uart/include -I/Users/dheerajmahendiran/esp/esp-idf/components/driver/usb_serial_jtag/include -I/Users/dheerajmahendiran/esp/esp-idf/components/driver/touch_sensor/esp32s3/include -I/Users/dheerajmahendiran/esp/esp-idf/components/esp_pm/include -I/Users/dheerajmahendiran/esp/esp-idf/components/esp_ringbuf/include -mlongcalls  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/Users/dheerajmahendiran/esp/scanchain=. -fmacro-prefix-map=/Users/dheerajmahendiran/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fno-exceptions -fno-rtti -std=gnu++23 -MD -MT esp-idf/cppspi/CMakeFiles/__idf_cppspi.dir/src/cppspi/cppspi.cpp.obj -MF esp-idf/cppspi/CMakeFiles/__idf_cppspi.dir/src/cppspi/cppspi.cpp.obj.d -o esp-idf/cppspi/CMakeFiles/__idf_cppspi.dir/src/cppspi/cppspi.cpp.obj -c /Users/dheerajmahendiran/esp/scanchain/components/cppspi/src/cppspi/cppspi.cpp
/Users/dheerajmahendiran/esp/scanchain/components/cppspi/src/cppspi/cppspi.cpp: In function 'void CPPSPI::sendNBitData(int*, uint8_t)':
/Users/dheerajmahendiran/esp/scanchain/components/cppspi/src/cppspi/cppspi.cpp:191:32: error: '_spi_interface_cfg' was not declared in this scope
  191 |     gpio_set_level((gpio_num_t)_spi_interface_cfg.spics_io_num, 0);
      |                                ^~~~~~~~~~~~~~~~~~
/Users/dheerajmahendiran/esp/scanchain/components/cppspi/src/cppspi/cppspi.cpp:192:21: error: 'WriteRegisterMultipleBytes' was not declared in this scope
  192 |     esp_err_t ret = WriteRegisterMultipleBytes(sendBuf , n);
      |                     ^~~~~~~~~~~~~~~~~~~~~~~~~~
[4/11] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj
ninja: build stopped: subcommand failed.
